# hackage-publish

./: README.md  hackage-publish.cabal  vira.hs
nix/modules/flake/: devshell.nix  haskell.nix  nixpkgs.nix
src/: Main.hs
src/Shh/: Nix.hs
