cabal-version:      2.4
name:               hackage-publish
version:            0.1.0.0
license:            MIT
copyright:          2025 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web
synopsis:           No frills releasing to Hackage
homepage:           https://github.com/srid/hackage-publish
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base              >=4   && <5
    , data-default
    , directory
    , filepath
    , mtl
    , optics-core
    , profunctors
    , relude            >=1.0
    , shh
    , shower
    , template-haskell
    , temporary
    , time
    , which
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable hackage-publish
  import:        shared
  main-is:       Main.hs
  other-modules: Shh.Nix
